# YSpec

./: CMakeLists.txt  README.md
examples/: input.txt  prem.200  prem.200.fic
mod/: module_fourier.mod  module_function.mod  module_int.mod  module_model.mod  module_solver.mod  module_spline.mod  module_start.mod  module_util.mod  nrtype.mod  nrutil.mod
models/: prem.200.iso
src/: CMakeLists.txt  Makefile  int_test1.f90  int_test2.f90  make_backup  module_fourier.f90  module_function.f90  module_int.f90  module_model.f90  module_solver.f90  module_start.f90  module_util.f90  nrtype.f90  nrutil.f90  yspec.f90  yspec_cal.f90  yspec_pre.f90  yspec_pro.f90  yspec_test.f90
